force-app/main/default/objects/SCOC__LCRDataSourceScore__c/SCOC__LCRDataSourceScore__c.object-meta.xml
<CustomObject>
    <description>Liquid Credit Data Source Score List</description>
    <label>LCRDataSourceScore</label>
    <nameField>
        <displayFormat>LCREDS-{00000}</displayFormat>
        <label>Liquid Credit Response Entity DataSource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCRDataSourceScores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>