force-app/main/default/objects/SCOC__LCRDataSourceScore__c/fields/SCOC__model__c.field-meta.xml
<CustomField>
    <fullName>SCOC__model__c</fullName>
    <description>This field contains the scoring model suite type submitted in the Liquid Credit Request for this entity Data Source Score.</description>
    <label>Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>