force-app/main/default/objects/SCOC__LCRDataSourceScore__c/fields/SCOC__modelLabel__c.field-meta.xml
<CustomField>
    <fullName>SCOC__modelLabel__c</fullName>
    <description>This field contains the scoring model label submitted in the Liquid Credit Request for this entity Data Source Score.</description>
    <label>Model Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>