force-app/main/default/objects/SCOC__LCRDataSourceScore__c/fields/SCOC__modelReason_1__c.field-meta.xml
<CustomField>
    <fullName>SCOC__modelReason_1__c</fullName>
    <description>This field contains the model reason 1 returned in the Liquid Credit Request for this entity Data Source Score.</description>
    <label>Model Reason 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>