force-app/main/default/objects/SCOC__LCRDataSourceScore__c/fields/SCOC__scoreReason_1_scoringModel__c.field-meta.xml
<CustomField>
    <fullName>SCOC__scoreReason_1_scoringModel__c</fullName>
    <description>This field contains the Score Reason 1 Scoring Model returned in the Liquid Credit Request for this entity Data Source Score.</description>
    <label>Score Reason 1 Scoring Model</label>
    <length>10</length>
    <type>Text</type>
</CustomField>