force-app/main/default/objects/SCOC__LCRDataSourceScore__c/fields/SCOC__scoreReason_2_dataSourceCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__scoreReason_2_dataSourceCode__c</fullName>
    <description>This field contains the Score Reason 2 Data Source Code returned in the Liquid Credit Request for this entity Data Source Score..</description>
    <label>Score Reason 2 Data Source Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EFU</fullName>
            </value>
            <value>
                <fullName>EFX</fullName>
            </value>
            <value>
                <fullName>TU</fullName>
            </value>
            <value>
                <fullName>TUC</fullName>
            </value>
            <value>
                <fullName>XPN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>