force-app/main/default/objects/SCOC__LCRDataSourceScore__c/fields/SCOC__scoreReason_3_reasonCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__scoreReason_3_reasonCode__c</fullName>
    <description>This field contains the Score Reason 3 Reason Code returned in the Liquid Credit Request for this entity Data Source Score.</description>
    <label>Score Reason 3 Reason Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>