force-app/main/default/objects/SCOC__LCRDataSourceScore__c/fields/SCOC__scoreReason_3_reasonCodeText__c.field-meta.xml
<CustomField>
    <fullName>SCOC__scoreReason_3_reasonCodeText__c</fullName>
    <description>The system automatically populates this optional text field with the description of the associated reason code. By default, it is blank.</description>
    <label>Score Reason 3 Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>