force-app/main/default/objects/SCOC__LCRDataSourceScore__c/fields/SCOC__totalScore__c.field-meta.xml
<CustomField>
    <fullName>SCOC__totalScore__c</fullName>
    <description>This field contains the total score for the Liquid Credit Request Entity Data Source Score.</description>
    <label>Total Score</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>