force-app/main/default/objects/SCOC__LCRDataSourceScore__c/fields/SCOC__type__c.field-meta.xml
<CustomField>
    <fullName>SCOC__type__c</fullName>
    <description>The type of this data source score.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SBSS70</fullName>
                <label>SBSS 7.0</label>
            </value>
            <value>
                <fullName>BK10</fullName>
                <label>SBSS Bankruptcy 1.0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>